// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DependencyGraph > addModule > when add new modules > should match snapshots 1`] = `
[
  {
    "dependencies": [
      {
        "id": 1357,
        "source": "./MainScreen",
      },
      {
        "id": 1359,
        "source": "./IntroScreen",
      },
    ],
    "dependents": [
      1361,
    ],
    "id": 1360,
    "path": "src/screens/index.ts",
  },
  {
    "dependencies": [
      {
        "id": 1357,
        "source": "@MainScreen",
      },
    ],
    "dependents": [
      1370,
    ],
    "id": 1369,
    "path": "root/screens.ts",
  },
  {
    "dependencies": [
      {
        "id": 73,
        "source": "react",
      },
      {
        "id": 509,
        "source": "react/jsx-runtime",
      },
      {
        "id": 1117,
        "source": "@react-navigation/stack",
      },
      {
        "id": 1360,
        "source": "../screens",
      },
    ],
    "dependents": [
      1362,
    ],
    "id": 1361,
    "path": "src/navigators/RootStack.tsx",
  },
  {
    "dependencies": [
      {
        "id": 73,
        "source": "react",
      },
      {
        "id": 448,
        "source": "react-native",
      },
      {
        "id": 1369,
        "source": "@root-screens",
      },
    ],
    "dependents": [],
    "id": 1370,
    "path": "root/entry.ts",
  },
  {
    "dependencies": [
      {
        "id": 1361,
        "source": "./RootStack",
      },
    ],
    "dependents": [
      1366,
    ],
    "id": 1362,
    "path": "src/navigators/index.ts",
  },
  {
    "dependencies": [
      {
        "id": 73,
        "source": "react",
      },
      {
        "id": 509,
        "source": "react/jsx-runtime",
      },
      {
        "id": 518,
        "source": "react-native-safe-area-context",
      },
      {
        "id": 813,
        "source": "react-native-gesture-handler",
      },
      {
        "id": 913,
        "source": "@react-navigation/native",
      },
      {
        "id": 985,
        "source": "@react-navigation/devtools",
      },
      {
        "id": 1042,
        "source": "dripsy",
      },
      {
        "id": 1362,
        "source": "./navigators",
      },
      {
        "id": 1365,
        "source": "./theme",
      },
    ],
    "dependents": [
      1368,
    ],
    "id": 1366,
    "path": "src/App.tsx",
  },
  {
    "dependencies": [
      {
        "id": 254,
        "source": "/Users/ghlee/workspace/react-native-esbuild/example/node_modules/react-native/Libraries/Core/InitializeCore.js",
      },
      {
        "id": 448,
        "source": "react-native",
      },
      {
        "id": 1366,
        "source": "./src/App",
      },
      {
        "id": 1367,
        "source": "./app.json",
      },
    ],
    "dependents": [],
    "id": 1368,
    "path": "index.js",
  },
]
`;

exports[`DependencyGraph > dependenciesOf > should match snapshot 1`] = `
[
  {
    "dependencies": [
      {
        "id": 72,
        "source": "./cjs/react.development.js",
      },
    ],
    "dependents": [
      74,
      206,
      207,
      237,
      243,
      257,
      259,
      262,
      263,
      265,
      266,
      270,
      271,
      272,
      276,
      277,
      279,
      280,
      282,
      302,
      304,
      308,
      309,
      329,
      330,
      336,
      339,
      344,
      345,
      374,
      375,
      376,
      378,
      380,
      383,
      387,
      388,
      390,
      391,
      395,
      399,
      400,
      401,
      402,
      403,
      404,
      407,
      408,
      409,
      410,
      412,
      416,
      417,
      418,
      439,
      440,
      443,
      446,
      457,
      459,
      460,
      461,
      462,
      449,
      464,
      465,
      466,
      467,
      468,
      469,
      470,
      397,
      473,
      474,
      475,
      478,
      479,
      480,
      481,
      483,
      484,
      487,
      488,
      398,
      489,
      490,
      492,
      493,
      494,
      495,
      498,
      499,
      500,
      503,
      504,
      505,
      506,
      507,
      508,
      512,
      514,
      625,
      633,
      634,
      635,
      638,
      639,
      640,
      641,
      644,
      645,
      647,
      648,
      651,
      652,
      653,
      655,
      656,
      657,
      677,
      678,
      679,
      770,
      773,
      776,
      783,
      789,
      803,
      805,
      806,
      807,
      808,
      810,
      811,
      812,
      825,
      827,
      828,
      829,
      830,
      831,
      832,
      833,
      834,
      835,
      836,
      837,
      838,
      839,
      843,
      845,
      857,
      858,
      859,
      860,
      861,
      863,
      864,
      865,
      870,
      871,
      874,
      875,
      876,
      877,
      878,
      879,
      880,
      881,
      882,
      883,
      884,
      885,
      886,
      887,
      888,
      889,
      890,
      891,
      893,
      894,
      895,
      896,
      898,
      899,
      900,
      903,
      904,
      905,
      906,
      907,
      909,
      911,
      912,
      980,
      981,
      984,
      986,
      987,
      988,
      994,
      995,
      999,
      1005,
      1006,
      1008,
      1009,
      1010,
      1012,
      1013,
      1023,
      1024,
      1027,
      1029,
      1034,
      1035,
      1037,
      1049,
      1052,
      1053,
      1055,
      1056,
      1057,
      1059,
      1062,
      1065,
      1066,
      1067,
      1068,
      1069,
      1072,
      1073,
      1074,
      1078,
      1079,
      1080,
      1092,
      1093,
      1094,
      1104,
      1105,
      1106,
      1107,
      1108,
      1109,
      1110,
      1111,
      1112,
      1113,
      1114,
      1115,
      1116,
      1118,
      1119,
      1120,
      1125,
      1137,
      1139,
      1141,
      1143,
      1145,
      1146,
      1148,
      1150,
      1152,
      1156,
      1158,
      1160,
      1162,
      1164,
      1166,
      1168,
      1170,
      1172,
      1174,
      1176,
      1177,
      1179,
      1181,
      1183,
      1185,
      1187,
      1188,
      1350,
      1351,
      1356,
      1357,
      1359,
      1361,
      1366,
    ],
    "id": 73,
    "path": "node_modules/react/index.js",
  },
  {
    "dependencies": [
      {
        "id": 18,
        "source": "invariant",
      },
      {
        "id": 29,
        "source": "./Libraries/Performance/Systrace",
      },
      {
        "id": 32,
        "source": "./Libraries/Utilities/warnOnce",
      },
      {
        "id": 37,
        "source": "./Libraries/BatchedBridge/NativeModules",
      },
      {
        "id": 38,
        "source": "./Libraries/TurboModule/TurboModuleRegistry",
      },
      {
        "id": 57,
        "source": "./Libraries/Utilities/Platform",
      },
      {
        "id": 70,
        "source": "./Libraries/UTFSequence",
      },
      {
        "id": 76,
        "source": "./Libraries/LogBox/LogBox",
      },
      {
        "id": 124,
        "source": "./Libraries/EventEmitter/RCTDeviceEventEmitter",
      },
      {
        "id": 130,
        "source": "./Libraries/Network/RCTNetworking",
      },
      {
        "id": 135,
        "source": "./Libraries/EventEmitter/NativeEventEmitter",
      },
      {
        "id": 147,
        "source": "./Libraries/NativeModules/specs/NativeDialogManagerAndroid",
      },
      {
        "id": 148,
        "source": "./Libraries/Alert/Alert",
      },
      {
        "id": 155,
        "source": "./Libraries/EventEmitter/RCTNativeAppEventEmitter",
      },
      {
        "id": 158,
        "source": "./Libraries/Utilities/DevSettings",
      },
      {
        "id": 162,
        "source": "./Libraries/StyleSheet/PlatformColorValueTypes",
      },
      {
        "id": 164,
        "source": "./Libraries/StyleSheet/processColor",
      },
      {
        "id": 167,
        "source": "./Libraries/Utilities/Appearance",
      },
      {
        "id": 181,
        "source": "./Libraries/AppState/AppState",
      },
      {
        "id": 188,
        "source": "./Libraries/Settings/Settings",
      },
      {
        "id": 210,
        "source": "./Libraries/Utilities/Dimensions",
      },
      {
        "id": 211,
        "source": "./Libraries/Utilities/PixelRatio",
      },
      {
        "id": 228,
        "source": "./Libraries/ReactNative/UIManager",
      },
      {
        "id": 244,
        "source": "./Libraries/ReactNative/RendererProxy",
      },
      {
        "id": 263,
        "source": "./Libraries/Components/View/View",
      },
      {
        "id": 264,
        "source": "./Libraries/StyleSheet/StyleSheet",
      },
      {
        "id": 265,
        "source": "./Libraries/ReactNative/RootTag",
      },
      {
        "id": 268,
        "source": "./Libraries/ReactNative/I18nManager",
      },
      {
        "id": 274,
        "source": "./Libraries/ReactNative/requireNativeComponent",
      },
      {
        "id": 282,
        "source": "./Libraries/Components/SafeAreaView/SafeAreaView",
      },
      {
        "id": 287,
        "source": "./Libraries/Interaction/InteractionManager",
      },
      {
        "id": 289,
        "source": "./Libraries/Animated/Easing",
      },
      {
        "id": 322,
        "source": "./Libraries/LayoutAnimation/LayoutAnimation",
      },
      {
        "id": 324,
        "source": "./Libraries/Components/Keyboard/Keyboard",
      },
      {
        "id": 335,
        "source": "./Libraries/Components/AccessibilityInfo/AccessibilityInfo",
      },
      {
        "id": 337,
        "source": "./Libraries/Components/ProgressBarAndroid/ProgressBarAndroid",
      },
      {
        "id": 339,
        "source": "./Libraries/Components/ActivityIndicator/ActivityIndicator",
      },
      {
        "id": 373,
        "source": "deprecated-react-native-prop-types",
      },
      {
        "id": 374,
        "source": "./Libraries/Text/Text",
      },
      {
        "id": 375,
        "source": "./Libraries/Components/Touchable/TouchableNativeFeedback",
      },
      {
        "id": 376,
        "source": "./Libraries/Components/Touchable/TouchableOpacity",
      },
      {
        "id": 377,
        "source": "./Libraries/Animated/Animated",
      },
      {
        "id": 378,
        "source": "./Libraries/Components/Button",
      },
      {
        "id": 379,
        "source": "./Libraries/Components/DrawerAndroid/DrawerLayoutAndroid",
      },
      {
        "id": 387,
        "source": "./Libraries/Image/Image",
      },
      {
        "id": 388,
        "source": "./Libraries/Image/ImageBackground",
      },
      {
        "id": 390,
        "source": "./Libraries/Components/TextInput/InputAccessoryView",
      },
      {
        "id": 391,
        "source": "./Libraries/Components/Keyboard/KeyboardAvoidingView",
      },
      {
        "id": 395,
        "source": "./Libraries/Modal/Modal",
      },
      {
        "id": 397,
        "source": "./Libraries/Components/ScrollView/ScrollView",
      },
      {
        "id": 400,
        "source": "./Libraries/Components/Pressable/Pressable",
      },
      {
        "id": 403,
        "source": "./Libraries/Components/RefreshControl/RefreshControl",
      },
      {
        "id": 404,
        "source": "./Libraries/Lists/SectionList",
      },
      {
        "id": 407,
        "source": "./Libraries/Components/StatusBar/StatusBar",
      },
      {
        "id": 410,
        "source": "./Libraries/Components/Switch/Switch",
      },
      {
        "id": 412,
        "source": "./Libraries/Components/TextInput/TextInput",
      },
      {
        "id": 416,
        "source": "./Libraries/Components/Touchable/Touchable",
      },
      {
        "id": 417,
        "source": "./Libraries/Components/Touchable/TouchableHighlight",
      },
      {
        "id": 418,
        "source": "./Libraries/Components/Touchable/TouchableWithoutFeedback",
      },
      {
        "id": 419,
        "source": "./Libraries/Lists/VirtualizedList",
      },
      {
        "id": 420,
        "source": "./Libraries/Lists/VirtualizedSectionList",
      },
      {
        "id": 422,
        "source": "./Libraries/ActionSheetIOS/ActionSheetIOS",
      },
      {
        "id": 423,
        "source": "./Libraries/Utilities/BackHandler",
      },
      {
        "id": 425,
        "source": "./Libraries/Components/Clipboard/Clipboard",
      },
      {
        "id": 426,
        "source": "./Libraries/Utilities/DeviceInfo",
      },
      {
        "id": 429,
        "source": "./Libraries/Linking/Linking",
      },
      {
        "id": 431,
        "source": "./Libraries/Interaction/PanResponder",
      },
      {
        "id": 433,
        "source": "./Libraries/PermissionsAndroid/PermissionsAndroid",
      },
      {
        "id": 435,
        "source": "./Libraries/PushNotificationIOS/PushNotificationIOS",
      },
      {
        "id": 437,
        "source": "./Libraries/Share/Share",
      },
      {
        "id": 438,
        "source": "./Libraries/Components/ToastAndroid/ToastAndroid",
      },
      {
        "id": 439,
        "source": "./Libraries/Animated/useAnimatedValue",
      },
      {
        "id": 442,
        "source": "./Libraries/Utilities/useColorScheme",
      },
      {
        "id": 443,
        "source": "./Libraries/Utilities/useWindowDimensions",
      },
      {
        "id": 445,
        "source": "./Libraries/Vibration/Vibration",
      },
      {
        "id": 446,
        "source": "./Libraries/YellowBox/YellowBoxDeprecated",
      },
      {
        "id": 447,
        "source": "./Libraries/StyleSheet/PlatformColorValueTypesIOS",
      },
      {
        "id": 449,
        "source": "./Libraries/Lists/FlatList",
      },
      {
        "id": 450,
        "source": "./Libraries/ReactNative/AppRegistry",
      },
    ],
    "dependents": [
      451,
      460,
      461,
      462,
      512,
      515,
      545,
      564,
      621,
      630,
      633,
      634,
      635,
      645,
      653,
      655,
      656,
      657,
      670,
      671,
      678,
      679,
      770,
      773,
      775,
      788,
      789,
      803,
      804,
      805,
      807,
      808,
      810,
      811,
      812,
      895,
      896,
      900,
      903,
      983,
      991,
      992,
      997,
      998,
      999,
      1001,
      1002,
      1003,
      1004,
      1005,
      1006,
      1007,
      1008,
      1009,
      1010,
      1012,
      1013,
      1024,
      1027,
      1028,
      1029,
      1030,
      1031,
      1034,
      1035,
      1037,
      1038,
      1043,
      1044,
      1045,
      1046,
      1047,
      1049,
      1050,
      1052,
      1055,
      1056,
      1057,
      1059,
      1062,
      1066,
      1067,
      1068,
      1069,
      1078,
      1080,
      1090,
      1095,
      1104,
      1105,
      1107,
      1108,
      1109,
      1110,
      1111,
      1112,
      1113,
      1122,
      1123,
      1124,
      1125,
      1127,
      1133,
      1155,
      1156,
      1166,
      1172,
      1351,
      1357,
      1359,
      1368,
    ],
    "id": 448,
    "path": "node_modules/react-native/index.js",
  },
  {
    "dependencies": [
      {
        "id": 508,
        "source": "./cjs/react-jsx-runtime.development.js",
      },
    ],
    "dependents": [
      512,
      514,
      633,
      655,
      657,
      678,
      679,
      773,
      783,
      789,
      803,
      805,
      806,
      807,
      808,
      810,
      811,
      812,
      825,
      839,
      861,
      870,
      875,
      877,
      886,
      899,
      905,
      907,
      995,
      999,
      1024,
      1027,
      1029,
      1034,
      1035,
      1037,
      1049,
      1052,
      1055,
      1056,
      1057,
      1059,
      1062,
      1066,
      1067,
      1068,
      1069,
      1074,
      1078,
      1079,
      1080,
      1092,
      1104,
      1105,
      1107,
      1108,
      1109,
      1111,
      1112,
      1113,
      1114,
      1118,
      1119,
      1120,
      1137,
      1139,
      1141,
      1143,
      1145,
      1146,
      1148,
      1150,
      1152,
      1156,
      1158,
      1160,
      1162,
      1164,
      1166,
      1168,
      1170,
      1174,
      1176,
      1179,
      1181,
      1183,
      1185,
      1187,
      1188,
      1350,
      1351,
      1357,
      1359,
      1361,
      1366,
    ],
    "id": 509,
    "path": "node_modules/react/jsx-runtime.js",
  },
  {
    "dependencies": [
      {
        "id": 512,
        "source": "./SafeAreaContext",
      },
      {
        "id": 514,
        "source": "./SafeAreaView",
      },
      {
        "id": 516,
        "source": "./InitialWindow",
      },
      {
        "id": 517,
        "source": "./SafeArea.types",
      },
    ],
    "dependents": [
      1056,
      1068,
      1069,
      1079,
      1113,
      1357,
      1366,
    ],
    "id": 518,
    "path": "node_modules/react-native-safe-area-context/src/index.tsx",
  },
  {
    "dependencies": [
      {
        "id": 1041,
        "source": "./core",
      },
    ],
    "dependents": [
      1118,
      1120,
      1357,
      1359,
      1365,
      1366,
    ],
    "id": 1042,
    "path": "node_modules/dripsy/src/index.ts",
  },
  {
    "dependencies": [
      {
        "id": 1118,
        "source": "./Button",
      },
      {
        "id": 1119,
        "source": "./Fade",
      },
      {
        "id": 1120,
        "source": "./Section",
      },
    ],
    "dependents": [
      1357,
      1359,
    ],
    "id": 1121,
    "path": "src/components/index.ts",
  },
  {
    "dependencies": [
      {
        "id": 73,
        "source": "react",
      },
      {
        "id": 1355,
        "source": "react-native-svg",
      },
    ],
    "dependents": [
      1357,
    ],
    "id": 1356,
    "path": "src/assets/logo.svg",
  },
]
`;

exports[`DependencyGraph > dependentsOf > should match snapshot 1`] = `
[
  {
    "dependencies": [
      {
        "id": 1357,
        "source": "./MainScreen",
      },
      {
        "id": 1359,
        "source": "./IntroScreen",
      },
    ],
    "dependents": [
      1361,
    ],
    "id": 1360,
    "path": "src/screens/index.ts",
  },
]
`;

exports[`DependencyGraph > inverseDependenciesOf > should match snapshot 1`] = `
[
  {
    "dependencies": [
      {
        "id": 1357,
        "source": "./MainScreen",
      },
      {
        "id": 1359,
        "source": "./IntroScreen",
      },
    ],
    "dependents": [
      1361,
    ],
    "id": 1360,
    "path": "src/screens/index.ts",
  },
  {
    "dependencies": [
      {
        "id": 73,
        "source": "react",
      },
      {
        "id": 509,
        "source": "react/jsx-runtime",
      },
      {
        "id": 1117,
        "source": "@react-navigation/stack",
      },
      {
        "id": 1360,
        "source": "../screens",
      },
    ],
    "dependents": [
      1362,
    ],
    "id": 1361,
    "path": "src/navigators/RootStack.tsx",
  },
  {
    "dependencies": [
      {
        "id": 1361,
        "source": "./RootStack",
      },
    ],
    "dependents": [
      1366,
    ],
    "id": 1362,
    "path": "src/navigators/index.ts",
  },
  {
    "dependencies": [
      {
        "id": 73,
        "source": "react",
      },
      {
        "id": 509,
        "source": "react/jsx-runtime",
      },
      {
        "id": 518,
        "source": "react-native-safe-area-context",
      },
      {
        "id": 813,
        "source": "react-native-gesture-handler",
      },
      {
        "id": 913,
        "source": "@react-navigation/native",
      },
      {
        "id": 985,
        "source": "@react-navigation/devtools",
      },
      {
        "id": 1042,
        "source": "dripsy",
      },
      {
        "id": 1362,
        "source": "./navigators",
      },
      {
        "id": 1365,
        "source": "./theme",
      },
    ],
    "dependents": [
      1368,
    ],
    "id": 1366,
    "path": "src/App.tsx",
  },
  {
    "dependencies": [
      {
        "id": 254,
        "source": "/Users/ghlee/workspace/react-native-esbuild/example/node_modules/react-native/Libraries/Core/InitializeCore.js",
      },
      {
        "id": 448,
        "source": "react-native",
      },
      {
        "id": 1366,
        "source": "./src/App",
      },
      {
        "id": 1367,
        "source": "./app.json",
      },
    ],
    "dependents": [],
    "id": 1368,
    "path": "index.js",
  },
]
`;

exports[`DependencyGraph > lazy load > should update module data 1`] = `
[
  {
    "dependencies": [
      {
        "id": 76,
        "source": "react",
      },
      {
        "id": 512,
        "source": "react/jsx-runtime",
      },
      {
        "id": 521,
        "source": "react-native-safe-area-context",
      },
      {
        "id": 816,
        "source": "react-native-gesture-handler",
      },
      {
        "id": 916,
        "source": "@react-navigation/native",
      },
      {
        "id": 988,
        "source": "@react-navigation/devtools",
      },
      {
        "id": 1045,
        "source": "dripsy",
      },
      {
        "id": 1364,
        "source": "./navigators",
      },
      {
        "id": 1367,
        "source": "./theme",
      },
    ],
    "dependents": [
      0,
    ],
    "id": 1,
    "path": "src/App.tsx",
  },
  {
    "dependencies": [
      {
        "id": 3,
        "source": "./setUpGlobals",
      },
      {
        "id": 20,
        "source": "./setUpDOM",
      },
      {
        "id": 52,
        "source": "./setUpPerformance",
      },
      {
        "id": 79,
        "source": "../LogBox/LogBox",
      },
      {
        "id": 80,
        "source": "./setUpErrorHandling",
      },
      {
        "id": 107,
        "source": "./polyfillPromise",
      },
      {
        "id": 110,
        "source": "./setUpRegeneratorRuntime",
      },
      {
        "id": 115,
        "source": "./setUpTimers",
      },
      {
        "id": 125,
        "source": "../Utilities/GlobalPerformanceLogger",
      },
      {
        "id": 147,
        "source": "./setUpXHR",
      },
      {
        "id": 152,
        "source": "./setUpAlert",
      },
      {
        "id": 153,
        "source": "./setUpNavigator",
      },
      {
        "id": 175,
        "source": "./setUpBatchedBridge",
      },
      {
        "id": 177,
        "source": "./setUpSegmentFetcher",
      },
      {
        "id": 180,
        "source": "./checkNativeVersion",
      },
      {
        "id": 201,
        "source": "./setUpDeveloperTools",
      },
      {
        "id": 453,
        "source": "../ReactNative/AppRegistry",
      },
    ],
    "dependents": [
      256,
      0,
    ],
    "id": 257,
    "path": "node_modules/react-native/Libraries/Core/InitializeCore.js",
  },
  {
    "dependencies": [
      {
        "id": 21,
        "source": "invariant",
      },
      {
        "id": 32,
        "source": "./Libraries/Performance/Systrace",
      },
      {
        "id": 35,
        "source": "./Libraries/Utilities/warnOnce",
      },
      {
        "id": 40,
        "source": "./Libraries/BatchedBridge/NativeModules",
      },
      {
        "id": 41,
        "source": "./Libraries/TurboModule/TurboModuleRegistry",
      },
      {
        "id": 60,
        "source": "./Libraries/Utilities/Platform",
      },
      {
        "id": 73,
        "source": "./Libraries/UTFSequence",
      },
      {
        "id": 79,
        "source": "./Libraries/LogBox/LogBox",
      },
      {
        "id": 127,
        "source": "./Libraries/EventEmitter/RCTDeviceEventEmitter",
      },
      {
        "id": 133,
        "source": "./Libraries/Network/RCTNetworking",
      },
      {
        "id": 138,
        "source": "./Libraries/EventEmitter/NativeEventEmitter",
      },
      {
        "id": 150,
        "source": "./Libraries/NativeModules/specs/NativeDialogManagerAndroid",
      },
      {
        "id": 151,
        "source": "./Libraries/Alert/Alert",
      },
      {
        "id": 158,
        "source": "./Libraries/EventEmitter/RCTNativeAppEventEmitter",
      },
      {
        "id": 161,
        "source": "./Libraries/Utilities/DevSettings",
      },
      {
        "id": 165,
        "source": "./Libraries/StyleSheet/PlatformColorValueTypes",
      },
      {
        "id": 167,
        "source": "./Libraries/StyleSheet/processColor",
      },
      {
        "id": 170,
        "source": "./Libraries/Utilities/Appearance",
      },
      {
        "id": 184,
        "source": "./Libraries/AppState/AppState",
      },
      {
        "id": 191,
        "source": "./Libraries/Settings/Settings",
      },
      {
        "id": 213,
        "source": "./Libraries/Utilities/Dimensions",
      },
      {
        "id": 214,
        "source": "./Libraries/Utilities/PixelRatio",
      },
      {
        "id": 231,
        "source": "./Libraries/ReactNative/UIManager",
      },
      {
        "id": 247,
        "source": "./Libraries/ReactNative/RendererProxy",
      },
      {
        "id": 266,
        "source": "./Libraries/Components/View/View",
      },
      {
        "id": 267,
        "source": "./Libraries/StyleSheet/StyleSheet",
      },
      {
        "id": 268,
        "source": "./Libraries/ReactNative/RootTag",
      },
      {
        "id": 271,
        "source": "./Libraries/ReactNative/I18nManager",
      },
      {
        "id": 277,
        "source": "./Libraries/ReactNative/requireNativeComponent",
      },
      {
        "id": 285,
        "source": "./Libraries/Components/SafeAreaView/SafeAreaView",
      },
      {
        "id": 290,
        "source": "./Libraries/Interaction/InteractionManager",
      },
      {
        "id": 292,
        "source": "./Libraries/Animated/Easing",
      },
      {
        "id": 325,
        "source": "./Libraries/LayoutAnimation/LayoutAnimation",
      },
      {
        "id": 327,
        "source": "./Libraries/Components/Keyboard/Keyboard",
      },
      {
        "id": 338,
        "source": "./Libraries/Components/AccessibilityInfo/AccessibilityInfo",
      },
      {
        "id": 340,
        "source": "./Libraries/Components/ProgressBarAndroid/ProgressBarAndroid",
      },
      {
        "id": 342,
        "source": "./Libraries/Components/ActivityIndicator/ActivityIndicator",
      },
      {
        "id": 376,
        "source": "deprecated-react-native-prop-types",
      },
      {
        "id": 377,
        "source": "./Libraries/Text/Text",
      },
      {
        "id": 378,
        "source": "./Libraries/Components/Touchable/TouchableNativeFeedback",
      },
      {
        "id": 379,
        "source": "./Libraries/Components/Touchable/TouchableOpacity",
      },
      {
        "id": 380,
        "source": "./Libraries/Animated/Animated",
      },
      {
        "id": 381,
        "source": "./Libraries/Components/Button",
      },
      {
        "id": 382,
        "source": "./Libraries/Components/DrawerAndroid/DrawerLayoutAndroid",
      },
      {
        "id": 390,
        "source": "./Libraries/Image/Image",
      },
      {
        "id": 391,
        "source": "./Libraries/Image/ImageBackground",
      },
      {
        "id": 393,
        "source": "./Libraries/Components/TextInput/InputAccessoryView",
      },
      {
        "id": 394,
        "source": "./Libraries/Components/Keyboard/KeyboardAvoidingView",
      },
      {
        "id": 398,
        "source": "./Libraries/Modal/Modal",
      },
      {
        "id": 400,
        "source": "./Libraries/Components/ScrollView/ScrollView",
      },
      {
        "id": 403,
        "source": "./Libraries/Components/Pressable/Pressable",
      },
      {
        "id": 406,
        "source": "./Libraries/Components/RefreshControl/RefreshControl",
      },
      {
        "id": 407,
        "source": "./Libraries/Lists/SectionList",
      },
      {
        "id": 410,
        "source": "./Libraries/Components/StatusBar/StatusBar",
      },
      {
        "id": 413,
        "source": "./Libraries/Components/Switch/Switch",
      },
      {
        "id": 415,
        "source": "./Libraries/Components/TextInput/TextInput",
      },
      {
        "id": 419,
        "source": "./Libraries/Components/Touchable/Touchable",
      },
      {
        "id": 420,
        "source": "./Libraries/Components/Touchable/TouchableHighlight",
      },
      {
        "id": 421,
        "source": "./Libraries/Components/Touchable/TouchableWithoutFeedback",
      },
      {
        "id": 422,
        "source": "./Libraries/Lists/VirtualizedList",
      },
      {
        "id": 423,
        "source": "./Libraries/Lists/VirtualizedSectionList",
      },
      {
        "id": 425,
        "source": "./Libraries/ActionSheetIOS/ActionSheetIOS",
      },
      {
        "id": 426,
        "source": "./Libraries/Utilities/BackHandler",
      },
      {
        "id": 428,
        "source": "./Libraries/Components/Clipboard/Clipboard",
      },
      {
        "id": 429,
        "source": "./Libraries/Utilities/DeviceInfo",
      },
      {
        "id": 432,
        "source": "./Libraries/Linking/Linking",
      },
      {
        "id": 434,
        "source": "./Libraries/Interaction/PanResponder",
      },
      {
        "id": 436,
        "source": "./Libraries/PermissionsAndroid/PermissionsAndroid",
      },
      {
        "id": 438,
        "source": "./Libraries/PushNotificationIOS/PushNotificationIOS",
      },
      {
        "id": 440,
        "source": "./Libraries/Share/Share",
      },
      {
        "id": 441,
        "source": "./Libraries/Components/ToastAndroid/ToastAndroid",
      },
      {
        "id": 442,
        "source": "./Libraries/Animated/useAnimatedValue",
      },
      {
        "id": 445,
        "source": "./Libraries/Utilities/useColorScheme",
      },
      {
        "id": 446,
        "source": "./Libraries/Utilities/useWindowDimensions",
      },
      {
        "id": 448,
        "source": "./Libraries/Vibration/Vibration",
      },
      {
        "id": 449,
        "source": "./Libraries/YellowBox/YellowBoxDeprecated",
      },
      {
        "id": 450,
        "source": "./Libraries/StyleSheet/PlatformColorValueTypesIOS",
      },
      {
        "id": 452,
        "source": "./Libraries/Lists/FlatList",
      },
      {
        "id": 453,
        "source": "./Libraries/ReactNative/AppRegistry",
      },
    ],
    "dependents": [
      454,
      463,
      464,
      465,
      515,
      518,
      548,
      567,
      624,
      633,
      636,
      637,
      638,
      648,
      656,
      658,
      659,
      660,
      673,
      674,
      681,
      682,
      773,
      776,
      778,
      791,
      792,
      806,
      807,
      808,
      810,
      811,
      813,
      814,
      815,
      898,
      899,
      903,
      906,
      986,
      994,
      995,
      1000,
      1001,
      1002,
      1004,
      1005,
      1006,
      1007,
      1008,
      1009,
      1010,
      1011,
      1012,
      1013,
      1015,
      1016,
      1027,
      1030,
      1031,
      1032,
      1033,
      1034,
      1037,
      1038,
      1040,
      1041,
      1046,
      1047,
      1048,
      1049,
      1050,
      1052,
      1053,
      1055,
      1058,
      1059,
      1060,
      1062,
      1065,
      1069,
      1070,
      1071,
      1072,
      1081,
      1083,
      1093,
      1098,
      1107,
      1108,
      1110,
      1111,
      1112,
      1113,
      1114,
      1115,
      1116,
      1125,
      1126,
      1127,
      1128,
      1130,
      1136,
      1158,
      1159,
      1169,
      1175,
      1354,
      2,
      1361,
      0,
    ],
    "id": 451,
    "path": "node_modules/react-native/index.js",
  },
  {
    "dependencies": [],
    "dependents": [
      0,
    ],
    "id": 1368,
    "path": "app.json",
  },
]
`;

exports[`DependencyGraph > removeModule > should match snapshot 1`] = `
[
  {
    "dependencies": [
      {
        "id": 1357,
        "source": "@MainScreen",
      },
    ],
    "dependents": [
      1370,
    ],
    "id": 1369,
    "path": "root/screens.ts",
  },
  {
    "dependencies": [
      {
        "id": 1357,
        "source": "@MainScreen",
      },
    ],
    "dependents": [],
    "id": 1372,
    "path": "re-export.ts",
  },
  {
    "dependencies": [
      {
        "id": 73,
        "source": "react",
      },
      {
        "id": 448,
        "source": "react-native",
      },
      {
        "id": 1369,
        "source": "@root-screens",
      },
    ],
    "dependents": [],
    "id": 1370,
    "path": "root/entry.ts",
  },
]
`;

exports[`DependencyGraph > size > should match snapshot 1`] = `1369`;
